--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>첫번째 프로젝트다</h1>
     <p>예ㅖㅖㅖㅖ</p>
-</body>
+    <h2>
+        모모모모모ㅗㅁ
+    </h2>
+
+    <h3>
+        추가했다.이부분
+    </h3>
+  </body>
 </html>
